v3: Backpack integration, 3 bugfixes, Settings menu, phase transitions
Backpack:
- Persistent save/load to disk (mobarmy_backpacks/<team>.dat)
- Snapshot/restore per battle round (like player inventories)
- Cleared on game end, deleted on reset

Bugfixes:
- Empty-wave ranking overflow (matchStartTick=-1 -> totalTimeTicks=0)
- /mobarmy skip now checks isBuilding() before advancing
- Boss bars cleaned up on /mobarmy stop (forceCleanup)
- Wave times now subtract pause ticks (wavePausedTicks)

Improvements:
- Settings menu: waveCount (1-10) + maxAliveMobs (5-200) sliders
- Randomizer mode toggle moved to header
- Phase transitions: Sound + Title (countdown pling, dragon growl, wither spawn)
- matches() uses Collections.unmodifiableList (O(1) vs O(n))
- NBT variant dedup via hash (no artificial cap)
- scheduler.clear() in resetToLobby
- Arena dimension: ambient_light=1.0, has_skylight=false